<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heading"
        style="@style/layout.heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/class_name"
            style="@style/text.title.white"
            android:layout_marginTop="16dp"
            android:text="@string/nama_kelas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/class_desc"
            style="@style/text.normal.white"
            android:layout_marginTop="16dp"
            android:text="@string/desc_kelas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/class_name" />

        <TextView
            android:id="@+id/semester"
            style="@style/text.normal.white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/semester"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/class_desc"
            app:layout_constraintTop_toBottomOf="@+id/class_desc" />

        <TextView
            android:id="@+id/tahun_ajaran"
            style="@style/text.normal.white"
            android:layout_marginStart="20dp"
            android:text="@string/tahun_ajaran"
            app:layout_constraintStart_toEndOf="@+id/semester"
            app:layout_constraintBottom_toBottomOf="@+id/semester"
            app:layout_constraintTop_toTopOf="@+id/semester" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/anak"
        style="@style/text.subtitle"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:text="@string/anak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anak"
        tools:listitem="@layout/anak_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>